--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -34,8 +34,54 @@
 }
 
 .header {
-    background-color: $watanopie-bg-blue;
-    color: $watanopie-blue;
+  background-color: $watanopie-bg-blue;
+  color: $watanopie-blue;
+}
+
+.header-main {
+  font-weight: 500;
+  font-size: 2.5rem;
+  text-transform: lowercase;
+  line-height: 1.0;
+}
+
+@media #{$breakpoint-sm} {
+  .header-author { font-size: 3rem; }
+}
+
+.header-sub {
+  font-weight: 500;
+  font-size: $h2;
+  font-style: italic;
+  text-transform: lowercase;
+  line-height: 1.0;
+}
+
+.section-header {
+  display: flex;
+  align-items: center;
+}
+
+.section-header::before, .section-header::after {
+  flex: 1 1 auto;
+  min-width: 0; /* 1 */
+  min-height: 0; /* 1 */
+  content: "";
+  border: 0;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ccc;
+  margin-left: $space-2; 
+  margin-right: $space-2;
+}
+
+.section-header-text {
+  font-size: $h1;
+  text-transform: lowercase;
+  text-align: center;
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .map-container {
@@ -98,4 +144,26 @@
   transition: none;
   border: 0;
   color: inherit;
+}
+
+/**
+ * Taken from pixyll.com
+ */
+
+.twitter-tweet {
+  padding: 1.33em;
+  border-left: 5px solid #7a7a7a;
+  // color: #555;
+}
+
+.twitter-tweet p {
+  font-style: italic;
+}
+
+.twitter-tweet footer {
+  font-size: .85rem;
+  font-style: normal;
+  background-color: #fff;
+  color: #7a7a7a;
+  border-color: transparent;
 }
