--- a/_sass/_styling.scss
+++ b/_sass/_styling.scss
@@ -34,3 +34,7 @@ a:active {
   color: lighten($watanopie-blue, 5%);
   border-bottom-color: transparent;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
