Lengthen header on author’s page

--- a/_layouts/authors_profile.html
+++ b/_layouts/authors_profile.html
@@ -43,10 +43,10 @@ layout: default
   {% endcomment %}
 
 <div class="card">
-  <header class="header rounded-top">
-    <div class="px2 sm-px3 pt2 pb3 mx-auto text-container">
+  <header class="header pt3 pb3 rounded-top">
+    <div class="px2 sm-px3 mx-auto text-container">
       <h1 class="header-main header-author mt0 mb0">{{ page.name }}</h1>
-      <h2 class="header-sub mt0 mb0">aus {{ page.city }}, {{ page.country }}</h2>
+      <h2 class="header-sub mt0">aus {{ page.city }}, {{ page.country }}</h2>
     </div>
   </header>
   <div class="py3 px2 sm-px3 mx-auto text-container">
