Move texts into data files; move tweets into collections; remove salome’s pictures

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
   <title>
     {% if page.collection == "authors" %}
-        Autorenprofil von {{ page.artist }}
+        Autorenprofil von {{ page.name }}
     {% else %}
       {{ site.title | escape }}
     {% endif %}
