Change style of profile

--- a/_layouts/authors_profile.html
+++ b/_layouts/authors_profile.html
@@ -47,9 +47,9 @@ layout: default
     <div class="mx-auto text-container">
       <h1 class="mt0 mb0 header-main header-author">{{ page.name }}</h1>
       <h2 class="header-sub mt0">aus {{ page.city }}, {{ page.country }}</h2>
-      <section class="mt3 mxn1 flex flex-wrap justify-start mid-gray lowercase">
-        <div class="px1"><strong>Geburtstag</strong>: {{ page.date_of_birth }}</div>
-        <div class="px1"><strong>Berufswunsch</strong>: {{ page.career_aspirations }}</div>
+      <section class="mt3 mxn1 flex flex-wrap justify-start header-profile">
+        <div class="px1">Geburtstag: {{ page.date_of_birth }}</div>
+        <div class="px1">Berufswunsch: {{ page.career_aspirations }}</div>
       </section>
     </div>
   </header>
