--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -57,6 +57,11 @@
   line-height: 1.0;
 }
 
+.header-profile {
+  font-size: 1.1rem;
+  text-transform: lowercase;
+}
+
 .section-header {
   display: flex;
   align-items: center;
