Refine design of tweets and other things

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -26,6 +26,7 @@ $watanopie-bg-blue: #30566b;
 $watanopie-blue: #63c4d8;
 
 $background-color: #F5F5F5;
+$card-color: #FFFFFF;
 
 $dark-gray: #333 !default;
 $mid-gray: #777 !default;
