--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -26,7 +26,7 @@
 }
 
 .card {
-  background-color: $white;
+  background-color: $card-color;
   border-radius: $border-radius;
 
   // .mdl-shadow--4dp
@@ -155,9 +155,18 @@
  */
 
 .twitter-tweet {
-  padding: 1.33em;
+  padding: 0.8em;
   border-left: 5px solid #7a7a7a;
-  // color: #555;
+  margin-left: $space-2;
+  margin-right: $space-2;
+}
+
+@media #{$breakpoint-sm} {
+  .twitter-tweet {
+    padding: 1.33em;
+    margin-left: $space-3;
+    margin-right: $space-3;
+  }
 }
 
 .twitter-tweet p {
