--- a/_layouts/authors_profile.html
+++ b/_layouts/authors_profile.html
@@ -52,7 +52,7 @@ layout: default
       </section>
     </div>
   </header>
-  <div class="py3 px2 sm-px3 mx-auto text-container">
+  <div class="pt2 sm-pt3 pb1 sm-pb3 px2 sm-px3 mx-auto text-container">
     <section class="mt3">
       <img src="{{ page.image | prepend: "assets/images/" | relative_url }}" 
            alt="Bild von {{ page.name }}"
