--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -33,6 +33,9 @@ $mid-gray: #777 !default;
 $light-gray: #ccc !default;
 $lighter-gray: #eee !default;
 
+$button-background-color: $watanopie-bg-blue;
+$button-color: $watanopie-blue;
+
 /* breakpoints */
 
 $breakpoint-sm: '(min-width: 36em)';
