--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,12 +22,16 @@
   <link rel="stylesheet" href="{{ "/assets/fonts/merlo_bolditalic_macroman/stylesheet.css" | relative_url }}" type="text/css" charset="utf-8" />
   <link rel="stylesheet" href="{{ "/assets/fonts/merlo_medium_macroman/stylesheet.css" | relative_url }}" type="text/css" charset="utf-8" />
   <link rel="stylesheet" href="{{ "/assets/fonts/merlo_mediumitalic_macroman/stylesheet.css" | relative_url }}" type="text/css" charset="utf-8" />
+
+  
   {% comment %}
     <!-- Currently unused font weights -->
     <link rel="stylesheet" href="{{ "/assets/fonts/merlo_thin_macroman/stylesheet.css" | relative_url }}" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="{{ "/assets/fonts/merlo_thinitalic_macroman/stylesheet.css" | relative_url }}" type="text/css" charset="utf-8" />
   {% endcomment %}
 
+  <script src="https://use.fontawesome.com/0001a64e7f.js"></script>
+  
   <link href="{{ "/assets/main.css" | relative_url }}" rel="stylesheet" type="text/css" charset="utf-8">
   
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
