--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,6 @@
   </div>
   {% endif %}
   <div class="col-right px2">
-    <a href="http://www.solidarigee.de" class="nav-link">zur hauptseite</a>
+    <a href="http://www.solidarigee.de" class="nav-link">zur Hauptseite</a>
   </div>
 </header>
