--- a/_layouts/authors_profile.html
+++ b/_layouts/authors_profile.html
@@ -32,8 +32,9 @@ layout: default
   <header class="px2 sm-px3 py2 sm-py3 header rounded-top">
     <div class="mx-auto text-container">
       <h1 class="mt0 mb0 header-main header-author">{{ page.name }}</h1>
-      <h2 class="header-sub mt0">aus {{ page.country }}</h2>
-      <section class="mt3 mxn1 flex flex-wrap justify-start header-profile">
+      <h2 class="mt1 header-country">aus {{ page.country }}</h2>
+      {% if page.age and page.date_of_birth and page.career_aspirations %}
+      <section class="mt3 header-profile">
         {% capture cv_text %}
         wird 
         {% if page.age and page.date_of_birth %}
@@ -46,8 +47,9 @@ layout: default
           {{ page.career_aspirations }}
         {% endif %}
         {% endcapture %}
-        <div class="px1">{{ cv_text }}</div>
+        <div class="">{{ cv_text }}</div>
       </section>
+      {% endif %}
     </div>
   </header>
   <div class="pt2 sm-pt3 pb1 sm-pb3 px2 sm-px3 mx-auto text-container">
