--- a/_sass/_styling.scss
+++ b/_sass/_styling.scss
@@ -39,3 +39,34 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   margin-top: 1.6em;
 }
+
+/**
+ * Taken from pixyll.com
+ */
+
+blockquote {
+  padding: 0.8em;
+  border-left: 5px solid #7a7a7a;
+  margin-left: $space-2;
+  margin-right: $space-2;
+}
+
+@media #{$breakpoint-sm} {
+  blockquote {
+    padding: 1.33em;
+    margin-left: $space-3;
+    margin-right: $space-3;
+  }
+}
+
+blockquote p {
+  font-style: italic;
+}
+
+blockquote footer {
+  font-size: .85rem;
+  font-style: normal;
+  background-color: #fff;
+  color: #7a7a7a;
+  border-color: transparent;
+}
