--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,22 @@
 <header class="h3 clearfix mxn1 sm-mt3 sm-mb2 mt2 mb1">
-  {% if page.collection == "authors" %}
-  <div class="col px2">
-    <a href="{{ page.title | prepend: '/#author_' | relative_url }}" class="nav-link">zurück</a>
-  </div>
-  {% if page.previous %}
-  <div class="col px2">
-    <a href="{{ page.previous.url | relative_url }}" class="nav-link">vorheriger</a>
-  </div>
-  {% endif %}
-  {% if page.next %}
-  <div class="col px2">
-    <a href="{{ page.next.url | relative_url }}" class="nav-link">nächster</a>
-  </div>
-  {% endif %}
-  {% endif %}
   <div class="col-right px2">
     <a href="http://www.solidarigee.de" class="nav-link">zur Hauptseite</a>
   </div>
+  {% if page.collection == "authors" %}
+    <div class="clearfix">
+      <div class="sm-col px2">
+        <a href="{{ page.title | prepend: '/#author_' | relative_url }}" class="nav-link">zurück</a>
+      </div>
+      {% if page.previous %}
+      <div class="sm-col px2">
+        <a href="{{ page.previous.url | relative_url }}" class="nav-link">vorheriger</a>
+      </div>
+      {% endif %}
+      {% if page.next %}
+      <div class="sm-col px2">
+        <a href="{{ page.next.url | relative_url }}" class="nav-link">nächster</a>
+      </div>
+      {% endif %}
+    </div>
+  {% endif %}
 </header>
